py-target/PdlangParser.py
# Generated from Pdlang.g4 by ANTLR 4.11.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class PdlangParser ( Parser ):

    grammarFileName = "Pdlang.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "';'", "'='", "','", "'.'", "':'", "'rounds do'", 
                     "'>='", "'<='", "'patch'", "'block'", "'::'", "'if'", 
                     "'elif'", "'else'", "'for'", "'thisround'", "'break'", 
                     "'continue'", "'pass'", "'end'", "'recall'", "'to'", 
                     "'('", "')'", "'{'", "'}'", "'['", "']'", "'<'", "'>'", 
                     "'=='", "'!='", "'+'", "'-'", "'**'", "'*'", "'/'", 
                     "'%'", "'||'", "'&&'", "'-~'", "'+~'", "'/~'", "'*~'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "PATCH", "BLOCK", "CONNECT", "IF", "ELIF", 
                      "ELSE", "FOR", "THISROUND", "BREAK", "CONTINUE", "PASS", 
                      "END", "RECALL", "TO", "L_PAREN", "R_PAREN", "L_CURLY", 
                      "R_CURLY", "L_BRACKET", "R_BRACKET", "L_ANGLE", "R_ANGLE", 
                      "EQ", "NOT_EQ", "PLUS", "MINUS", "POW", "STAR", "DIV", 
                      "MOD", "OR", "AND", "SIGMINUS", "SIGPLUS", "SIGDIV", 
                      "SIGSTAR", "NODETYPE", "GENERALTYPE", "OBJTYPE", "INOUTID", 
                      "ID", "SYMBOL", "NUMBER", "INTEGER", "FLOAT", "NL", 
                      "WS", "COMMENT" ]

    RULE_prog = 0
    RULE_blockstmt = 1
    RULE_endofblock = 2
    RULE_stmt = 3
    RULE_declarationstmt = 4
    RULE_parameters = 5
    RULE_typedargslist = 6
    RULE_arg = 7
    RULE_operation = 8
    RULE_ioletbase = 9
    RULE_ioletdeclstmt = 10
    RULE_connectionstmt = 11
    RULE_declinside = 12
    RULE_connectionelem = 13
    RULE_recallstmt = 14
    RULE_ifstmt = 15
    RULE_forstmt = 16
    RULE_suite = 17
    RULE_expr = 18

    ruleNames =  [ "prog", "blockstmt", "endofblock", "stmt", "declarationstmt", 
                   "parameters", "typedargslist", "arg", "operation", "ioletbase", 
                   "ioletdeclstmt", "connectionstmt", "declinside", "connectionelem", 
                   "recallstmt", "ifstmt", "forstmt", "suite", "expr" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    PATCH=9
    BLOCK=10
    CONNECT=11
    IF=12
    ELIF=13
    ELSE=14
    FOR=15
    THISROUND=16
    BREAK=17
    CONTINUE=18
    PASS=19
    END=20
    RECALL=21
    TO=22
    L_PAREN=23
    R_PAREN=24
    L_CURLY=25
    R_CURLY=26
    L_BRACKET=27
    R_BRACKET=28
    L_ANGLE=29
    R_ANGLE=30
    EQ=31
    NOT_EQ=32
    PLUS=33
    MINUS=34
    POW=35
    STAR=36
    DIV=37
    MOD=38
    OR=39
    AND=40
    SIGMINUS=41
    SIGPLUS=42
    SIGDIV=43
    SIGSTAR=44
    NODETYPE=45
    GENERALTYPE=46
    OBJTYPE=47
    INOUTID=48
    ID=49
    SYMBOL=50
    NUMBER=51
    INTEGER=52
    FLOAT=53
    NL=54
    WS=55
    COMMENT=56

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.11.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PATCH(self):
            return self.getToken(PdlangParser.PATCH, 0)

        def ID(self):
            return self.getToken(PdlangParser.ID, 0)

        def NL(self):
            return self.getToken(PdlangParser.NL, 0)

        def blockstmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PdlangParser.BlockstmtContext)
            else:
                return self.getTypedRuleContext(PdlangParser.BlockstmtContext,i)


        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PdlangParser.StmtContext)
            else:
                return self.getTypedRuleContext(PdlangParser.StmtContext,i)


        def getRuleIndex(self):
            return PdlangParser.RULE_prog

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProg" ):
                listener.enterProg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProg" ):
                listener.exitProg(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProg" ):
                return visitor.visitProg(self)
            else:
                return visitor.visitChildren(self)




    def prog(self):

        localctx = PdlangParser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_prog)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 38
            self.match(PdlangParser.PATCH)
            self.state = 39
            self.match(PdlangParser.ID)
            self.state = 40
            self.match(PdlangParser.NL)
            self.state = 43 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 43
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [10]:
                    self.state = 41
                    self.blockstmt()
                    pass
                elif token in [12, 15, 17, 18, 19, 21, 29, 45, 49, 54]:
                    self.state = 42
                    self.stmt()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 45 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (((_la) & ~0x3f) == 0 and ((1 << _la) & 18612533374915584) != 0):
                    break

            self.state = 47
            self.match(PdlangParser.T__0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockstmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BLOCK(self):
            return self.getToken(PdlangParser.BLOCK, 0)

        def ID(self):
            return self.getToken(PdlangParser.ID, 0)

        def L_CURLY(self):
            return self.getToken(PdlangParser.L_CURLY, 0)

        def NL(self, i:int=None):
            if i is None:
                return self.getTokens(PdlangParser.NL)
            else:
                return self.getToken(PdlangParser.NL, i)

        def endofblock(self):
            return self.getTypedRuleContext(PdlangParser.EndofblockContext,0)


        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PdlangParser.StmtContext)
            else:
                return self.getTypedRuleContext(PdlangParser.StmtContext,i)


        def getRuleIndex(self):
            return PdlangParser.RULE_blockstmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlockstmt" ):
                listener.enterBlockstmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlockstmt" ):
                listener.exitBlockstmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlockstmt" ):
                return visitor.visitBlockstmt(self)
            else:
                return visitor.visitChildren(self)




    def blockstmt(self):

        localctx = PdlangParser.BlockstmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_blockstmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 49
            self.match(PdlangParser.BLOCK)
            self.state = 50
            self.match(PdlangParser.ID)
            self.state = 51
            self.match(PdlangParser.L_CURLY)
            self.state = 52
            self.match(PdlangParser.NL)
            self.state = 56
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while ((_la) & ~0x3f) == 0 and ((1 << _la) & 18612533374914560) != 0:
                self.state = 53
                self.stmt()
                self.state = 58
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 59
            self.endofblock()
            self.state = 60
            self.match(PdlangParser.NL)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EndofblockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def R_CURLY(self):
            return self.getToken(PdlangParser.R_CURLY, 0)

        def getRuleIndex(self):
            return PdlangParser.RULE_endofblock

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEndofblock" ):
                listener.enterEndofblock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEndofblock" ):
                listener.exitEndofblock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEndofblock" ):
                return visitor.visitEndofblock(self)
            else:
                return visitor.visitChildren(self)




    def endofblock(self):

        localctx = PdlangParser.EndofblockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_endofblock)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 62
            self.match(PdlangParser.R_CURLY)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declarationstmt(self):
            return self.getTypedRuleContext(PdlangParser.DeclarationstmtContext,0)


        def NL(self):
            return self.getToken(PdlangParser.NL, 0)

        def ioletdeclstmt(self):
            return self.getTypedRuleContext(PdlangParser.IoletdeclstmtContext,0)


        def connectionstmt(self):
            return self.getTypedRuleContext(PdlangParser.ConnectionstmtContext,0)


        def recallstmt(self):
            return self.getTypedRuleContext(PdlangParser.RecallstmtContext,0)


        def ifstmt(self):
            return self.getTypedRuleContext(PdlangParser.IfstmtContext,0)


        def forstmt(self):
            return self.getTypedRuleContext(PdlangParser.ForstmtContext,0)


        def BREAK(self):
            return self.getToken(PdlangParser.BREAK, 0)

        def CONTINUE(self):
            return self.getToken(PdlangParser.CONTINUE, 0)

        def PASS(self):
            return self.getToken(PdlangParser.PASS, 0)

        def getRuleIndex(self):
            return PdlangParser.RULE_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStmt" ):
                listener.enterStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStmt" ):
                listener.exitStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStmt" ):
                return visitor.visitStmt(self)
            else:
                return visitor.visitChildren(self)




    def stmt(self):

        localctx = PdlangParser.StmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_stmt)
        try:
            self.state = 89
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 64
                self.declarationstmt()
                self.state = 65
                self.match(PdlangParser.NL)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 67
                self.ioletdeclstmt()
                self.state = 68
                self.match(PdlangParser.NL)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 70
                self.connectionstmt()
                self.state = 71
                self.match(PdlangParser.NL)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 73
                self.recallstmt()
                self.state = 74
                self.match(PdlangParser.NL)
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 76
                self.ifstmt()
                self.state = 77
                self.match(PdlangParser.NL)
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 79
                self.forstmt()
                self.state = 80
                self.match(PdlangParser.NL)
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 82
                self.match(PdlangParser.BREAK)
                self.state = 83
                self.match(PdlangParser.NL)
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 84
                self.match(PdlangParser.CONTINUE)
                self.state = 85
                self.match(PdlangParser.NL)
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 86
                self.match(PdlangParser.PASS)
                self.state = 87
                self.match(PdlangParser.NL)
                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)
                self.state = 88
                self.match(PdlangParser.NL)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclarationstmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return PdlangParser.RULE_declarationstmt

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class FullDeclStmtContext(DeclarationstmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PdlangParser.DeclarationstmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(PdlangParser.ID, 0)
        def NODETYPE(self):
            return self.getToken(PdlangParser.NODETYPE, 0)
        def parameters(self):
            return self.getTypedRuleContext(PdlangParser.ParametersContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFullDeclStmt" ):
                listener.enterFullDeclStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFullDeclStmt" ):
                listener.exitFullDeclStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFullDeclStmt" ):
                return visitor.visitFullDeclStmt(self)
            else:
                return visitor.visitChildren(self)


    class FastDeclStmtContext(DeclarationstmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PdlangParser.DeclarationstmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def NODETYPE(self):
            return self.getToken(PdlangParser.NODETYPE, 0)
        def parameters(self):
            return self.getTypedRuleContext(PdlangParser.ParametersContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFastDeclStmt" ):
                listener.enterFastDeclStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFastDeclStmt" ):
                listener.exitFastDeclStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFastDeclStmt" ):
                return visitor.visitFastDeclStmt(self)
            else:
                return visitor.visitChildren(self)


    class OpDeclStmtContext(DeclarationstmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PdlangParser.DeclarationstmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(PdlangParser.ID, 0)
        def operation(self):
            return self.getTypedRuleContext(PdlangParser.OperationContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOpDeclStmt" ):
                listener.enterOpDeclStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOpDeclStmt" ):
                listener.exitOpDeclStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOpDeclStmt" ):
                return visitor.visitOpDeclStmt(self)
            else:
                return visitor.visitChildren(self)



    def declarationstmt(self):

        localctx = PdlangParser.DeclarationstmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_declarationstmt)
        try:
            self.state = 100
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                localctx = PdlangParser.FullDeclStmtContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 91
                self.match(PdlangParser.ID)
                self.state = 92
                self.match(PdlangParser.T__1)

                self.state = 93
                self.match(PdlangParser.NODETYPE)
                self.state = 94
                self.parameters()
                pass

            elif la_ == 2:
                localctx = PdlangParser.FastDeclStmtContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 95
                self.match(PdlangParser.NODETYPE)
                self.state = 96
                self.parameters()
                pass

            elif la_ == 3:
                localctx = PdlangParser.OpDeclStmtContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 97
                self.match(PdlangParser.ID)
                self.state = 98
                self.match(PdlangParser.T__1)
                self.state = 99
                self.operation()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParametersContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def L_PAREN(self):
            return self.getToken(PdlangParser.L_PAREN, 0)

        def R_PAREN(self):
            return self.getToken(PdlangParser.R_PAREN, 0)

        def typedargslist(self):
            return self.getTypedRuleContext(PdlangParser.TypedargslistContext,0)


        def getRuleIndex(self):
            return PdlangParser.RULE_parameters

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParameters" ):
                listener.enterParameters(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParameters" ):
                listener.exitParameters(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParameters" ):
                return visitor.visitParameters(self)
            else:
                return visitor.visitChildren(self)




    def parameters(self):

        localctx = PdlangParser.ParametersContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_parameters)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 102
            self.match(PdlangParser.L_PAREN)
            self.state = 104
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if ((_la) & ~0x3f) == 0 and ((1 << _la) & 3692391974305792) != 0:
                self.state = 103
                self.typedargslist()


            self.state = 106
            self.match(PdlangParser.R_PAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypedargslistContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def arg(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PdlangParser.ArgContext)
            else:
                return self.getTypedRuleContext(PdlangParser.ArgContext,i)


        def ioletbase(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PdlangParser.IoletbaseContext)
            else:
                return self.getTypedRuleContext(PdlangParser.IoletbaseContext,i)


        def getRuleIndex(self):
            return PdlangParser.RULE_typedargslist

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTypedargslist" ):
                listener.enterTypedargslist(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTypedargslist" ):
                listener.exitTypedargslist(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTypedargslist" ):
                return visitor.visitTypedargslist(self)
            else:
                return visitor.visitChildren(self)




    def typedargslist(self):

        localctx = PdlangParser.TypedargslistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_typedargslist)
        self._la = 0 # Token type
        try:
            self.state = 131
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [33, 34, 36, 37, 41, 42, 43, 44, 50, 51]:
                self.enterOuterAlt(localctx, 1)
                self.state = 108
                self.arg()
                self.state = 113
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,6,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 109
                        self.match(PdlangParser.T__2)
                        self.state = 110
                        self.arg() 
                    self.state = 115
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,6,self._ctx)

                self.state = 120
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==3:
                    self.state = 116
                    self.match(PdlangParser.T__2)
                    self.state = 117
                    self.ioletbase()
                    self.state = 122
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass
            elif token in [48]:
                self.enterOuterAlt(localctx, 2)
                self.state = 123
                self.ioletbase()
                self.state = 128
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==3:
                    self.state = 124
                    self.match(PdlangParser.T__2)
                    self.state = 125
                    self.ioletbase()
                    self.state = 130
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArgContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SYMBOL(self):
            return self.getToken(PdlangParser.SYMBOL, 0)

        def operation(self):
            return self.getTypedRuleContext(PdlangParser.OperationContext,0)


        def getRuleIndex(self):
            return PdlangParser.RULE_arg

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArg" ):
                listener.enterArg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArg" ):
                listener.exitArg(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArg" ):
                return visitor.visitArg(self)
            else:
                return visitor.visitChildren(self)




    def arg(self):

        localctx = PdlangParser.ArgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_arg)
        try:
            self.state = 135
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [50]:
                self.enterOuterAlt(localctx, 1)
                self.state = 133
                self.match(PdlangParser.SYMBOL)
                pass
            elif token in [33, 34, 36, 37, 41, 42, 43, 44, 51]:
                self.enterOuterAlt(localctx, 2)
                self.state = 134
                self.operation()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class OperationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.op = None # Token

        def NUMBER(self):
            return self.getToken(PdlangParser.NUMBER, 0)

        def STAR(self):
            return self.getToken(PdlangParser.STAR, 0)

        def DIV(self):
            return self.getToken(PdlangParser.DIV, 0)

        def SIGSTAR(self):
            return self.getToken(PdlangParser.SIGSTAR, 0)

        def SIGDIV(self):
            return self.getToken(PdlangParser.SIGDIV, 0)

        def PLUS(self):
            return self.getToken(PdlangParser.PLUS, 0)

        def MINUS(self):
            return self.getToken(PdlangParser.MINUS, 0)

        def SIGPLUS(self):
            return self.getToken(PdlangParser.SIGPLUS, 0)

        def SIGMINUS(self):
            return self.getToken(PdlangParser.SIGMINUS, 0)

        def getRuleIndex(self):
            return PdlangParser.RULE_operation

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOperation" ):
                listener.enterOperation(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOperation" ):
                listener.exitOperation(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOperation" ):
                return visitor.visitOperation(self)
            else:
                return visitor.visitChildren(self)




    def operation(self):

        localctx = PdlangParser.OperationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_operation)
        self._la = 0 # Token type
        try:
            self.state = 142
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [51]:
                self.enterOuterAlt(localctx, 1)
                self.state = 137
                self.match(PdlangParser.NUMBER)
                pass
            elif token in [33, 34, 36, 37, 41, 42, 43, 44]:
                self.enterOuterAlt(localctx, 2)
                self.state = 138
                localctx.op = self._input.LT(1)
                _la = self._input.LA(1)
                if not(((_la) & ~0x3f) == 0 and ((1 << _la) & 33217277067264) != 0):
                    localctx.op = self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 140
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==51:
                    self.state = 139
                    self.match(PdlangParser.NUMBER)


                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IoletbaseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INOUTID(self):
            return self.getToken(PdlangParser.INOUTID, 0)

        def NODETYPE(self):
            return self.getToken(PdlangParser.NODETYPE, 0)

        def parameters(self):
            return self.getTypedRuleContext(PdlangParser.ParametersContext,0)


        def operation(self):
            return self.getTypedRuleContext(PdlangParser.OperationContext,0)


        def ID(self):
            return self.getToken(PdlangParser.ID, 0)

        def getRuleIndex(self):
            return PdlangParser.RULE_ioletbase

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIoletbase" ):
                listener.enterIoletbase(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIoletbase" ):
                listener.exitIoletbase(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIoletbase" ):
                return visitor.visitIoletbase(self)
            else:
                return visitor.visitChildren(self)




    def ioletbase(self):
